2016-12-16	"The best prophet of the future is the past."

		include/innocent-pear/omg.h :
		- unified treatment of omg<...>::omg() and omg<...>::omg(...)

		include/innocent-pear/tfw.h :
		- rewrote tfw<...>::operator!()

2016-12-12	"I shot an arrow in to the air, and it stuck."  (9)

		include/innocent-pear/yarly.h :
		- added yarly<...>::wut(...), for later use

		include/innocent-pear/host/rly.h :
		- added rly<...>::wut(...), for later use

2016-12-04	Loops.

		include/innocent-pear/kthxbai.h :
		- added (finite) loops

		include/innocent-pear/omg.h :
		- on x86-32 and x86-64, `verr' and `verw' are now always
		  eligible

		include/innocent-pear/bbq.h :
		- removed innocent_pear::ops::allow_emulator_unsafes
		- added do_op_rept(...) and do_inv_op_rept(...)

2016-11-27	Commit CCCXXXIII.

		include/innocent-pear/omg.h :
		- for x86-32 and x86-64, may now issue `verr', `verw', `sldt',
		  `sgdt', and/or `sidt' instructions
		- redistributed probabilities

2016-11-25	"I shot an arrow in to the air, and it stuck."  (8)

		configure ,
		GNUmakefile ,
		bin/innocent-pear-front-end.tcc :
		- now try to test for and use `-fwritable-strings' clang++
		  option when compiling the doge-??.cc modules

		include/innocent-pear/bbq.h :
		- removed use of optimize(.) attributes

		share/innocent-pear/doge-i.h :
		- removed use of optimize(.) attribute in innocent_pear_DOGE
		  _MEMSET when under clang++

		LICENSE :
		- reverted to using the GNU LGPL v3

		lolwutconf/ :
		- bumped to c7fa319627

2016-11-21	"I shot an arrow in to the air, and it stuck."  (7)

		include/innocent-pear/omg.h :
		- now does pointer aliasing à la kthxbai.h

2016-11-20	Try to inhibit constant merging for `-Xinnocent-pear -doge'.

		bin/innocent-pear-front-end.tcc :
		- now compiles doge-*.cc routines with -fno-merge-constants
		  and -fno-merge-all-constants, so that constants in these
		  modules do not accidentally end up in scrambled regions

		include/innocent-pear/bbq.h :